End of day commit.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,5 @@
-ws.url.solr.resourcepartners=${ws.url.solr.resourcepartners}
-ws.url.solr.username=${ws.url.solr.username}
-ws.url.solr.password=${ws.url.solr.password}
+ws.url.elastic.index=${ws.url.elastic.index}
+ws.url.elastic.username=${ws.url.elastic.username}
+ws.url.elastic.password=${ws.url.elastic.password}
+
+ws.url.ilrs=${ws.url.ilrs}
