--- a/src/main/resources/mapping-partners.json
+++ b/src/main/resources/mapping-partners.json
@@ -15,6 +15,10 @@
         "status": { "type": "keyword" },
         "suspension_start": { "type": "date", "format": "basic_date" },
         "suspension_end": { "type": "date", "format": "basic_date" },
+        "email_main": { "type": "text" },
+        "email_ill": { "type": "text" },
+        "phone_main": { "type": "text" },
+        "phone_ill": { "type": "text" },
         "addresses": {
           "properties": {
             "address_status": { "type": "keyword" },
@@ -35,9 +39,9 @@
                     "@desc": { "type": "keyword" }
                   }
                 },
-                "address_note": { "type": "keyword" },
-                "start_date": { "type": "keyword" },
-                "end_date": { "type": "keyword" },
+                "address_note": { "type": "text" },
+                "start_date": { "type": "date", "format": "basic_date" },
+                "end_date": { "type": "date", "format": "basic_date" },
                 "address_types": { "type": "keyword" }
               }
             }
@@ -48,6 +52,7 @@
     "partner-change": { 
       "properties": {
         "time": { "type": "date", "format": "date_time_no_millis" },
+        "source_system": { "type": "keyword"},
         "nuc": { "type": "keyword"},
         "field": { "type": "keyword" },
         "before": { "type": "text" },
