--- a/src/main/resources/mapping-partners.json
+++ b/src/main/resources/mapping-partners.json
@@ -12,6 +12,7 @@
         "updated": { "type": "date", "format": "date_time_no_millis" },
         "name": { "type": "keyword" },
         "enabled": { "type": "boolean" },
+        "iso_ill": { "type": "boolean" },
         "status": { "type": "keyword" },
         "email_main": { "type": "text" },
         "email_ill": { "type": "text" },
