--- a/src/main/resources/mapping-partner-records.json
+++ b/src/main/resources/mapping-partner-records.json
@@ -6,7 +6,7 @@
     }
   },
   "mappings": {
-    "partner": { 
+    "partner-record": { 
       "properties": {
         "nuc": { "type": "keyword"},
         "updated": { "type": "date", "format": "date_time_no_millis" },
@@ -57,16 +57,6 @@
             }
           }
         }
-      }
-    },
-    "partner-change": { 
-      "properties": {
-        "time": { "type": "date", "format": "date_time_no_millis" },
-        "source_system": { "type": "keyword"},
-        "nuc": { "type": "keyword"},
-        "field": { "type": "keyword" },
-        "before": { "type": "text" },
-        "after": { "type": "text" }
       }
     }
   }
