Updated default configuration.

--- a/src/main/config/app.properties
+++ b/src/main/config/app.properties
@@ -4,9 +4,9 @@ ws.url.elastic.password=
 
 ws.url.ilrs=http://www.nla.gov.au/apps/ilrs
 
-ws.url.ladd=http://www.nla.gov.au/librariesaustralia/services/docdel/members-suspensions/
+ws.url.ladd=https://www.nla.gov.au/librariesaustralia/connect/find-library/ladd-members-and-suspensions
 
-ws.url.tepuna=http://natlib.govt.nz/directory-of-new-zealand-libraries.csv
+ws.url.tepuna=https://natlib.govt.nz/directory-of-new-zealand-libraries.csv
 
 outlook.url.endpoint=https://outlook.office.com/api/v2.0
 outlook.url.token=https://login.microsoftonline.com/82c514c1-a717-4087-be06-d40d2070ad52/oauth2/token
