--- a/src/main/config/app.properties
+++ b/src/main/config/app.properties
@@ -12,3 +12,4 @@ outlook.url.endpoint=https://outlook.office.com/api/v2.0
 outlook.url.token=https://login.microsoftonline.com/82c514c1-a717-4087-be06-d40d2070ad52/oauth2/token
 outlook.client.id=
 outlook.client.secret=
+outlook.email
