--- a/src/main/config/app.properties
+++ b/src/main/config/app.properties
@@ -8,8 +8,8 @@ ws.url.ladd=https://www.nla.gov.au/librariesaustralia/connect/find-library/ladd-
 
 ws.url.tepuna=https://natlib.govt.nz/directory-of-new-zealand-libraries.csv
 
-outlook.url.endpoint=https://outlook.office.com/api/v2.0
-outlook.url.token=https://login.microsoftonline.com/82c514c1-a717-4087-be06-d40d2070ad52/oauth2/token
+outlook.url.endpoint=https://graph.microsoft.com/v1.0
+outlook.url.token=https://login.microsoftonline.com/common/oauth2/v2.0/token
+outlook.client.email=
 outlook.client.id=
 outlook.client.secret=
-outlook.email
