--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.nishen</groupId>
 	<artifactId>resource-sharing-partners-harvest</artifactId>
-	<version>0.2.3</version>
+	<version>0.2.4</version>
 	<packaging>jar</packaging>
 
 	<name>resource-partners</name>
@@ -12,7 +12,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
 		<log.base>C:/Data/resource-partners/logs</log.base>
 		<log.level>DEBUG</log.level>
 	</properties>
@@ -38,7 +37,7 @@
 		<dependency>
 			<groupId>org.jvnet.jaxb2_commons</groupId>
 			<artifactId>jaxb2-basics-runtime</artifactId>
-			<version>0.11.1</version>
+			<version>0.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.inject</groupId>
@@ -115,7 +114,7 @@
 		<dependency>
 			<groupId>org.glassfish.jaxb</groupId>
 			<artifactId>jaxb-runtime</artifactId>
-			<version>2.3.1</version>
+			<version>2.3.5</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.activation</groupId>
@@ -213,6 +212,13 @@
 				<groupId>org.jvnet.jaxb2.maven2</groupId>
 				<artifactId>maven-jaxb2-plugin</artifactId>
 				<version>0.14.0</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.glassfish.jaxb</groupId>
+						<artifactId>jaxb-runtime</artifactId>
+						<version>2.3.5</version>
+					</dependency>
+				</dependencies>
 				<executions>
 					<execution>
 						<id>generate-entity</id>
@@ -245,7 +251,7 @@
 								<plugin>
 									<groupId>org.jvnet.jaxb2_commons</groupId>
 									<artifactId>jaxb2-basics</artifactId>
-									<version>1.11.1</version>
+									<version>0.12.0</version>
 								</plugin>
 							</plugins>
 						</configuration>
